--- a/src/components/featured/featured.scss
+++ b/src/components/featured/featured.scss
@@ -51,22 +51,23 @@ $book-size: 77px;
 
   & img {
     width: 80%;
-    height: auto; 
+    height: 60%; 
     object-fit: contain;
     position: relative;
-    @extend %absolute-center;
+    top:10%;
+    left: 50%;
+    transform: translate(-50%);
   }
 
   & .text-container {
     display: flex;
     flex-direction: column;
-    
     align-items: center;
-    gap:30px;
+    gap:10px;
     height: 100%;
     & h1 {
-        margin-top: 30%;
-        font-size: 4rem;
+        margin-top: 20%;
+        font-size: 3rem;
     }
     & p {
         font-size: 1.5em;
@@ -75,12 +76,12 @@ $book-size: 77px;
   }
 }
 
-@for $i from 1 through 100 {
+@for $i from 1 through 20 {
     .page:nth-child(#{$i}) {
       @if $i % 2 == 1 {
         padding: 5% 4% 4% 5%;
         transform-origin: 0% 50%;
-        transform: translatez(-1px * $i);
+        transform: translatez(-5px * $i);
       } @else {
         padding: 5% 5% 4% 4%;
         transform-origin: 100% 50%;
@@ -94,20 +95,20 @@ $book-size: 77px;
           background: #ccc;
         }
       } @else {
-        background: #9bc8d6;
+        background: #cbd3c1;
       }
     }
     
     .left-side:nth-child(#{$i}) {
       @if $i % 2 == 1 {
-        transform: translatez(1px * $i) rotatey(-180deg);
+        transform: translateZ(1px * $i) rotateY(-180deg);
       } @else {
-        transform: translatez(1px * $i) scalex(-1) translatex(100%) rotatey(180deg);
+        transform: translateZ(1px * $i) scaleX(-1) translateX(100%) rotateY(180deg);
       }
     }
   }
 
-.cover-front {
+.page.cover-front {
   text-align: center;
   background: 
     linear-gradient( #afd2dd, #a1d5e5) 50% 50% / 80% 86% no-repeat, 
