--- a/src/components/featured/featured.scss
+++ b/src/components/featured/featured.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Yatra+One&display=swap');
 
+$font-main:  "IBM Plex Sans", sans-serif;
+$font-text:  "Inika", serif;
+
 .feature-container {
   min-height: 100vh;
   box-sizing: border-box;
@@ -36,7 +39,7 @@
   overflow: hidden;
   height: 100%;
   padding: 10px;
-
+  font-family: $font-text;
 
 
   img {
@@ -70,7 +73,7 @@
   h1 {
     font-size: 2.4rem; 
     margin-top: 50%;
-    font-family: "Yatra One", system-ui;
+    font-family: $font-main;
     color: rgb(180, 17, 118);
     text-transform: uppercase;
   }
@@ -84,7 +87,8 @@
   p {
     padding-inline: 3px;
     font-size: 1.2rem;
-    color: #000000; 
+    color: #000000;
+    font-family: $font-text;
   }
 }
 
@@ -95,6 +99,7 @@
   gap:15px;
   align-items: center;
   justify-content: center;
+  font-family: $font-text;
   button {
     background-color: #00a835;
     color: white;
