--- a/src/components/gallery/gallery.scss
+++ b/src/components/gallery/gallery.scss
@@ -1,3 +1,5 @@
+$font-main:  "IBM Plex Sans", sans-serif;
+$font-text:  "Inika", serif;
 
 .gallery {
     --s: 20vw; /* control the size */
@@ -18,7 +20,6 @@
     min-width: 100%;
     object-fit: cover;
     cursor: pointer;
-    // filter: grayscale(80%);
     transition: .35s linear;
   }
   
@@ -28,6 +29,7 @@
         align-items: center;
         position: relative;
         .text-container{
+           font-family: $font-text;
             opacity: 0;
             transition: opacity 0s;
            
@@ -36,7 +38,7 @@
                 top: 40%;
                 left: 50%;
                 background-color: #e0E6e2;
-                font-size: 5rem;
+                font-size: 3.5rem;
                 z-index: 5;
             }
             p {
@@ -44,7 +46,7 @@
                 top: 60%;
                 left: 50%;
                 background-color: #e0E6e2;
-                font-size: 2rem;
+                font-size: 1.5rem;
                 z-index: 5;
             }
             &-active {
@@ -58,10 +60,10 @@
             }
     }
   
-  body {
-    margin: 0;
-    min-height: 100vh;
-    display: grid;
-    place-content: center;
-    background: #ffffff;
-  }
+  // body {
+  //   margin: 0;
+  //   min-height: 100vh;
+  //   display: grid;
+  //   place-content: center;
+  //   background: #ffffff;
+  // }
