--- a/src/App.scss
+++ b/src/App.scss
@@ -13,11 +13,15 @@ html, body {
     padding: 0;
   }
 
-
+section {
+  height: 100vh;
+}
 
 .section-title {
-    font-size: 4rem;
+    font-size: 3rem;
     text-align: center;
     font-family: $font-main;
+    margin-top: 30px;
+    margin-bottom:10px;
 }
 
