--- a/src/App.scss
+++ b/src/App.scss
@@ -11,11 +11,17 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
+    scroll-snap-type: y mandatory;
+    /* scroll-snap-stop: always; */
+    scroll-snap-coordinate: 50%;
+
   }
 
-section {
-  height: 100vh;
-}
+  section {
+    height: 100vh;
+    scroll-snap-align: center;
+  }
 
 .section-title {
     font-size: 4rem;
