--- a/src/components/featured/featured.scss
+++ b/src/components/featured/featured.scss
@@ -9,6 +9,59 @@ $font-text: "Inika", serif;
   justify-content: center;
   position: relative;
   height: 100vh;
+  background-color: #ffffff;
+  opacity: 0.8;
+  background-image: linear-gradient(
+      30deg,
+      #fff9f3 12%,
+      transparent 12.5%,
+      transparent 87%,
+      #fff9f3 87.5%,
+      #fff9f3
+    ),
+    linear-gradient(
+      150deg,
+      #fff9f3 12%,
+      transparent 12.5%,
+      transparent 87%,
+      #fff9f3 87.5%,
+      #fff9f3
+    ),
+    linear-gradient(
+      30deg,
+      #fff9f3 12%,
+      transparent 12.5%,
+      transparent 87%,
+      #fff9f3 87.5%,
+      #fff9f3
+    ),
+    linear-gradient(
+      150deg,
+      #fff9f3 12%,
+      transparent 12.5%,
+      transparent 87%,
+      #fff9f3 87.5%,
+      #fff9f3
+    ),
+    linear-gradient(
+      60deg,
+      #fff9f377 25%,
+      transparent 25.5%,
+      transparent 75%,
+      #fff9f377 75%,
+      #fff9f377
+    ),
+    linear-gradient(
+      60deg,
+      #fff9f377 25%,
+      transparent 25.5%,
+      transparent 75%,
+      #fff9f377 75%,
+      #fff9f377
+    );
+  background-size: 20px 35px;
+  background-position: 0 0, 0 0, 10px 18px, 10px 18px, 0 0, 10px 18px;
+
   .feature-container {
     min-height: 80%;
     box-sizing: border-box;
