add animation with lazyloader and add responsiveness to contact section

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,3 +31,9 @@ html, body {
     margin-bottom:10px;
 }
 
+@media (max-width: 768px) {
+  section{
+    height: 100%;
+    overflow: auto;
+  }
+}
