--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,150 +1,219 @@
 $font-main: "IBM Plex Sans", sans-serif;
 $font-text: "Inika", serif;
 
-.contact-section{
+.contact-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5%;
+  width: 80vw;
+  height: 80vh;
+  margin-inline: auto;
+  margin-block: auto;
+  gap: 5%;
+  .contact-left-section {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-between;
+    flex: 1;
+    margin-left: 10%;
+    animation: fadeInLeft 2s forwards;
+    h3 {
+      margin-bottom: auto;
+      font-size: 1.5rem;
+      font-weight: 300;
+      font-family: $font-text;
+    }
+    h1 {
+      margin-top: auto;
+      margin-bottom: 5%;
+      font-family: $font-main;
+      font-size: 4.5rem;
+      font-weight: 500;
+      line-height: 100%;
+    }
+  }
+  .contact-photo {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
     align-items: center;
-    padding: 5%;
-    width: 80vw;
-    height: 80vh;
-    margin-inline: auto;
-    margin-block: auto;
-    gap:5%;
-    .contact-left-section {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        flex:1;
-        margin-left:10%;
-        animation: fadeInLeft 2s forwards;
-        h3 {
-            margin-bottom: auto;
-            font-size: 1.5rem;
-            font-weight: 300;
-            font-family: $font-text;
-        }
-        h1 {
-            margin-top: auto;
-            margin-bottom: 5%;
-            font-family: $font-main;
-            font-size: 4.5rem;
-            font-weight: 500;
-            line-height: 100%;
-        }
-       
+    animation: fadeInBottom 2s forwards;
+    img {
+      width: 90%;
+      max-width: 500px;
+      // margin-top: 20%;
     }
-    .contact-photo {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-        justify-content: space-between;
-        align-items: center;
-        animation: fadeInBottom 2s forwards;
-        img {
-            width: 90%;
-            max-width: 500px;
-            // margin-top: 20%;
-        }
-        p {
-            font-family: $font-text;
-            font-size: 1.5rem;
-            font-weight: bold;
-        }
+    p {
+      font-family: $font-text;
+      font-size: 1.5rem;
+      font-weight: bold;
     }
+  }
 
-    .contact-form {
-        width: 100%;
-        font-family: $font-text;
-        display: flex;
-        flex-direction: column;
-        gap:5px;
-      
-        .contact-field {
-          margin-bottom: 20px;
-      
-          label {
-            display: block;
-            font-weight: bold;
-            margin-bottom: 5px;
-          }
-      
-          input[type='text'],
-          input[type='email'],
-          textarea {
-            width: 95%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 16px;
-            transition: border-color 0.3s ease;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-      
-            &:focus {
-              outline: none;
-              border-color: #6dabe4;
-            }
-          }
-      
-          textarea {
-            height: 150px;
-            resize: none;
-          }
-        }
-        .attachment-preview {
-          margin-top: 10px;
-          display: flex;
-          gap: 3px;
-        
-          img {
-            display: block;
-            width: 100px;
-            height: 100px; 
-            object-fit: cover;
-            border-radius: 5px; 
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-          }
-        }
-        .contact-button {
-          display: block;
-          width: 100%;
-          margin-top: 5%;
-          margin-inline: auto;
-          padding: 10px;
-          background-color: transparent;
-          color: black;
-          border: 2px solid black;
-          font-size: 1rem;
-          cursor: pointer;
-          transition: background-color 0.3s ease;
-      
-          &:hover {
-            background-color: #000000;
-            color: white;
-          }
+  .contact-form {
+    width: 100%;
+    font-family: $font-text;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+    .contact-field {
+      margin-bottom: 20px;
+
+      label {
+        display: block;
+        font-weight: bold;
+        margin-bottom: 5px;
+      }
+
+      input[type="text"],
+      input[type="email"],
+      textarea {
+        width: 95%;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 16px;
+        transition: border-color 0.3s ease;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+
+        &:focus {
+          outline: none;
+          border-color: #6dabe4;
         }
       }
+
+      textarea {
+        height: 150px;
+        resize: none;
+      }
+    }
+    .contact-textfield {
+      label {
+        display: block;
+        font-weight: bold;
+      }
+      textarea {
+        width: 95%;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 16px;
+        transition: border-color 0.3s ease;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        min-height: 50px;
+        max-width: 95%;
+
+        &:focus {
+          outline: none;
+          border-color: #6dabe4;
+        }
+      }
+    }
+    .attachment-preview {
+      margin-top: 10px;
+      display: flex;
+      gap: 3px;
+
+      img {
+        display: block;
+        width: 100px;
+        height: 100px;
+        object-fit: cover;
+        border-radius: 5px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
+    }
+    .contact-button {
+      display: block;
+      width: 100%;
+      margin-top: 5%;
+      margin-inline: auto;
+      padding: 10px;
+      background-color: transparent;
+      color: black;
+      border: 2px solid black;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+
+      &:hover {
+        background-color: #000000;
+        color: white;
+      }
+    }
+  }
 }
 
 @keyframes fadeInLeft {
-    from{
-        opacity: 0;
-        transform: translateX(-100%)
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
+  from {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 @keyframes fadeInBottom {
-    from{
-        opacity: 0;
-        transform: translateY(100%)
+  from {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@media (min-width: 768px) {
+  .contact-textfield textarea {
+    width: 50%;
+  }
+}
+
+@media (max-width: 768px) {
+  .contact-section {
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    .contact-left-section {
+      h3 {
+        font-size: 1rem;
+        font-weight: 300;
+      }
+      h1 {
+        font-size: 2.5rem;
+      }
     }
-    to {
-        opacity: 1;
-        transform: translateY(0);
+    .contact-photo {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      justify-content: space-between;
+      align-items: center;
+      animation: fadeInBottom 2s forwards;
+      img {
+        width: 90%;
+        max-width: 300px;
+        margin-top: 20%;
+      }
+      p {
+        font-size: 1.2rem;
+      }
     }
+    .contact-form {
+      gap: 1px;
+
+      .contact-field {
+        margin-bottom: 10px;
+      }
+    }
+  }
 }
