--- a/src/components/featured/featured.scss
+++ b/src/components/featured/featured.scss
@@ -65,6 +65,7 @@ $font-text: "Inika", serif;
   .feature-container {
     min-height: 80%;
     box-sizing: border-box;
+    animation: slideUp 1s forwards;
   }
 
   .guide {
@@ -240,6 +241,17 @@ $font-text: "Inika", serif;
   100% {
     left: 20px;
     transform: translateY(4px);
+  }
+}
+
+@keyframes slideUp {
+  from {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
