add mobile responsiveness to featured section

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,4 +36,8 @@ html, body {
     height: 100%;
     overflow: auto;
   }
+  .section-title {
+    margin-top: 0px;
+    font-size: 2.5rem;
+  }
 }
