add responsiveness to about section

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,6 +31,13 @@ html, body {
     margin-bottom:10px;
 }
 
+@media (max-width: 1024px) {
+  section #About{
+    height: 100%;
+    overflow: auto;
+  }
+}
+
 @media (max-width: 768px) {
   section{
     height: 100%;
